--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
                         <i class="fas fa-envelope"></i>
                         <div>
                             <strong>Email:</strong><br>
-                            <a href="mailto:-----@gmail.com" style="color: white;">-----@gmail.com</a>
+                            <a href="mailto:nirvijayco@gmail.com" style="color: white;">nirvijayco@gmail.com</a>
                         </div>
                     </div>
                     
@@ -644,7 +644,7 @@
                         <i class="fas fa-phone"></i>
                         <div>
                             <strong>Phone:</strong><br>
-                            <a href="tel:+977-98--------" style="color: white;">+977-98--------</a>
+                            <a href="tel:+977-9761800559" style="color: white;">+977-9761800559</a>
                         </div>
                     </div>
                     
@@ -666,10 +666,10 @@
                     </div>
 
                     <div class="social-links">
-                        <a href="https://linkedin.com/arya" target="_blank" title="LinkedIn Profile">
+                        <a href="https://www.linkedin.com/company/nirvijay-co" target="_blank" title="LinkedIn Profile">
                             <i class="fab fa-linkedin"></i>
                         </a>
-                        <a href="mailto:-----@gmail.com" title="Email Us">
+                        <a href="mailto:nirvijayco@gmail.com" title="Email Us">
                             <i class="fas fa-envelope"></i>
                         </a>
                     </div>
