--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
         <nav class="container">
             <div class="logo">
                 <div class="logo-placeholder">
-                    <img src="logo.png" alt="Nirvijay & Co Logo" style="width: 100%; height: 100%; object-fit: contain; border-radius: 12px;">
+                    <img src="Logo.png" alt="Nirvijay & Co Logo" style="width: 100%; height: 100%; object-fit: contain; border-radius: 12px;">
                 </div>
                 <h1>Nirvijay & Co</h1>
             </div>
